# msd

./: NOTES.md  README.md  download_msd_data.py  pyproject.toml
src/msd/: __init__.py  cli.py  plot.py
